# CI-CD-API

./: .dockerignore  CMakeLists.txt  Jenkinsfile  README.md  docker-compose.yml
client/: Dockerfile  pyproject.toml
client/src/: client.py  data_transfer_pb2.py  data_transfer_pb2.pyi  data_transfer_pb2_grpc.py  grpc_client.py  main.py
proto_files/: data_transfer.proto
server/: CMakeLists.txt  Dockerfile
server/src/: main.cpp
src/: main.cpp
tests/: run_tests.sh
